--- a/app/src/main/res/layout/activity_compte_update.xml
+++ b/app/src/main/res/layout/activity_compte_update.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".activity.Inscription">
+    tools:context=".activity.CompteUpdate">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,7 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="50dp"
             android:gravity="center"
-            android:text="Inscription"
+            android:text="Modifier Profil"
             android:textColor="@color/white"
             android:textSize="35dp"
             android:textStyle="bold" />
@@ -62,7 +61,8 @@
             android:inputType="textEmailAddress"
             android:padding="20dp"
             android:textColor="@color/white"
-            android:textColorHint="@color/white" />
+            android:textColorHint="@color/white"
+            android:enabled="false"/>
 
         <EditText
             android:layout_width="match_parent"
@@ -70,7 +70,7 @@
             android:id="@+id/mdp"
             android:layout_below="@id/mail"
             android:background="#30ffffff"
-            android:hint="Mot de Passe"
+            android:hint="Nouveau Mot de Passe"
             android:textColorHint="@color/white"
             android:textColor="@color/white"
             android:layout_margin="10dp"
