--- a/app/src/main/res/layout/fragment_compte.xml
+++ b/app/src/main/res/layout/fragment_compte.xml
@@ -32,6 +32,8 @@
                 android:textStyle="bold" />
         </LinearLayout>
 
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="450dp"
@@ -63,6 +65,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:orientation="vertical">
 
@@ -73,7 +76,7 @@
                     android:background="#00018786">
 
                     <LinearLayout
-                        android:layout_width="350dp"
+                        android:layout_width="400dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:orientation="horizontal">
@@ -82,10 +85,10 @@
                             android:id="@+id/textView16"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="60dp"
+                            android:layout_marginLeft="100dp"
                             android:layout_weight="1"
                             android:drawableLeft="@drawable/ic_baseline_person_outline_24"
-                            android:text="Nom"
+                            android:text="Nom:"
                             android:textColor="@color/white" />
                     </LinearLayout>
 
@@ -111,7 +114,7 @@
                     android:layout_weight="1">
 
                     <LinearLayout
-                        android:layout_width="350dp"
+                        android:layout_width="400dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:orientation="horizontal">
@@ -120,10 +123,10 @@
                             android:id="@+id/textView18"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="60dp"
+                            android:layout_marginLeft="100dp"
                             android:layout_weight="1"
                             android:drawableLeft="@drawable/ic_baseline_person_outline_24"
-                            android:text="Prenom"
+                            android:text="Prenom:"
                             android:textColor="@color/white" />
                     </LinearLayout>
 
@@ -149,7 +152,7 @@
                     android:layout_weight="1">
 
                     <LinearLayout
-                        android:layout_width="350dp"
+                        android:layout_width="340dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:orientation="horizontal">
@@ -158,10 +161,10 @@
                             android:id="@+id/textView20"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="60dp"
+                            android:layout_marginLeft="100dp"
                             android:layout_weight="1"
                             android:drawableLeft="@android:drawable/sym_action_email"
-                            android:text="Email"
+                            android:text="Email:"
                             android:textColor="@color/white" />
                     </LinearLayout>
 
@@ -181,22 +184,14 @@
                     </LinearLayout>
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1">
-
-                    <Switch
-                        android:id="@+id/theme_mod"
-                        android:layout_width="match_parent"
-                        android:layout_height="75dp"
-                        android:layout_weight="1"
-                        android:text="Mode Sombre" />
-                </LinearLayout>
-
             </LinearLayout>
 
         </LinearLayout>
+
+        <androidx.legacy.widget.Space
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_weight="1" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -205,14 +200,28 @@
             android:orientation="vertical">
 
             <Button
+                android:id="@+id/btnmodifier"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_centerInParent="true"
+                android:text="Modifier" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+            <Button
                 android:id="@+id/btndeconnect"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
-
                 android:layout_centerInParent="true"
                 android:text="@string/deconnect" />
 
         </RelativeLayout>
+
 
     </LinearLayout>
 </ScrollView>
