--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -70,14 +70,16 @@
 
         <Button
             android:id="@+id/btninscription"
-            android:layout_width="171dp"
+            android:layout_width="177dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="20dp"
+            android:background="@color/teal_200"
             android:text="S'inscrire"
             android:textColor="@color/white"
             android:textSize="20dp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"/>
 
 
 
