--- a/app/src/main/res/layout/fragment_compte.xml
+++ b/app/src/main/res/layout/fragment_compte.xml
@@ -197,13 +197,16 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginTop="18dp">
 
             <Button
                 android:id="@+id/btnmodifier"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="50dp"
                 android:layout_centerInParent="true"
+                android:background="@color/purple_500"
+                android:textColor="@color/white"
                 android:text="Modifier" />
 
         </RelativeLayout>
@@ -212,12 +215,16 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginTop="10dp">
+
             <Button
                 android:id="@+id/btndeconnect"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="50dp"
                 android:layout_centerInParent="true"
+                android:background="?android:attr/textColorLinkInverse"
+                android:textColor="@color/white"
                 android:text="@string/deconnect" />
 
         </RelativeLayout>
